# non-transiting

./: MANIFEST.in  README.md  pyproject.toml  setup.py
grid_scripts/: create_grid_phase_offset.py  photometry_grid_fit_phase_offset.py
model/: ExoplanetarySystem_phaseoffset.py  create_grid_phase_offset.py  photometry_grid_fit_phase_offset.py  utils.py
notebooks/: model_example.ipynb
src/non_transiting/: __init__.py
src/non_transiting/model/: __init__.py  model.py
src/non_transiting/references/: 9139163_lc_filtered.txt  Kepler_Response_Function.txt  t0_estimation.csv
src/non_transiting/utils/: derived_parameters.py
utils/: bayes_factor.py  photometry_free_fit.py
